test/e2e/chainsaw/gateway/konnect-dynamic-naming/02-assert-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: (join('-', [($test_name), 'gateway-class']))
status:
  (conditions[?type == 'Accepted']):
    - status: 'True'
      reason: Accepted
